# XXZ-Delta-Time-Evolution

./: CMakeLists.txt  CMakeLists2.txt  README.md  Unitary_as_gates.h  Unitary_as_gates_new.h  Unitary_as_gates_sav.h  Unitary_as_gates_v1.h  circuit.cc  circuit_new.cc  ed_Ising_krylov.cc  ed_XXZ_full_time_evol.cc  ed_XXZ_krylov.cc  ed_XXZ_krylov_correlations.cc  ed_XXZ_si.cc  ed_XXZ_si_all_measure_A.cc  ed_XXZ_si_prod.cc  ed_XXZ_si_resonances.cc  ed_XXZ_si_resonances2.cc  ed_XXZ_si_resonances2_fast.cc  ed_XXZ_si_resonances_1thread.cc  ed_XXZ_si_resonances_complete.cc  ed_XXZ_si_test.cc  ed_potts_fullbasis_si.cc  ed_potts_pottsbasis_full.cc  ed_qp_si.cc  mini_exam.cpp  slepc_hello.cc
Spin/: Ising.h  Potts.h  Potts_Pottsbasis.h  Potts_basis.h  SpinOneHalfXXZ_disorder.h  SpinOneHalfXXZ_qp.h  Spin_basis.h  Spin_fullbasis.h  Spin_observable.h  Spin_observable_fullbasis.h  Spin_parameters.h
